apps/base/checkout/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    commit-sha: REPLACE_ME
  labels: &id001
    app.kubernetes.io/managed-by: teams-scaffolder
    app.kubernetes.io/name: checkout
    app.kubernetes.io/part-of: finance
  name: checkout
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: checkout
  template:
    metadata:
      labels: *id001
    spec:
      containers:
      - image: REPLACE_ME/checkout:latest
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        name: checkout
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          limits:
            cpu: 200m
            memory: 256Mi
          requests:
            cpu: 50m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
      securityContext:
        fsGroup: 1000
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
