apps/base/checkout/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/managed-by: teams-scaffolder
    app.kubernetes.io/name: checkout
    app.kubernetes.io/part-of: finance
  name: checkout
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: checkout
  type: ClusterIP
